@@ -16,30 +16,18 @@
 
 package com.badlogic.gdx.backends.lwjgl3.audio;
 
-import static org.lwjgl.openal.AL10.AL_BUFFER;
-import static org.lwjgl.openal.AL10.AL_NO_ERROR;
-import static org.lwjgl.openal.AL10.AL_ORIENTATION;
-import static org.lwjgl.openal.AL10.AL_PAUSED;
-import static org.lwjgl.openal.AL10.AL_PLAYING;
-import static org.lwjgl.openal.AL10.AL_POSITION;
-import static org.lwjgl.openal.AL10.AL_SOURCE_STATE;
-import static org.lwjgl.openal.AL10.AL_STOPPED;
-import static org.lwjgl.openal.AL10.AL_VELOCITY;
-import static org.lwjgl.openal.AL10.alDeleteSources;
-import static org.lwjgl.openal.AL10.alGenSources;
-import static org.lwjgl.openal.AL10.alGetError;
-import static org.lwjgl.openal.AL10.alGetSourcei;
-import static org.lwjgl.openal.AL10.alListenerfv;
-import static org.lwjgl.openal.AL10.alSourcePause;
-import static org.lwjgl.openal.AL10.alSourcePlay;
-import static org.lwjgl.openal.AL10.alSourceStop;
-import static org.lwjgl.openal.AL10.alSourcei;
+import static org.lwjgl.openal.AL10.*;
 import static org.lwjgl.openal.ALC10.*;
+import static org.lwjgl.openal.EXTDisconnect.ALC_CONNECTED;
+import static org.lwjgl.openal.EnumerateAllExt.ALC_ALL_DEVICES_SPECIFIER;
 
 import java.nio.Buffer;
 import java.nio.ByteBuffer;
 import java.nio.FloatBuffer;
 import java.nio.IntBuffer;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 import org.lwjgl.BufferUtils;
 import org.lwjgl.openal.AL;
@@ -57,7 +45,10 @@ import com.badlogic.gdx.utils.LongMap;
 import com.badlogic.gdx.utils.ObjectMap;
 import org.lwjgl.openal.ALC;
 import org.lwjgl.openal.ALCCapabilities;
+import org.lwjgl.openal.ALUtil;
 import org.lwjgl.openal.SOFTDirectChannels;
+import org.lwjgl.openal.SOFTReopenDevice;
+import org.lwjgl.openal.SOFTXHoldOnDisconnect;
 import org.lwjgl.openal.SOFTDirectChannelsRemix;
 
 /** @author Nathan Sweet */
@@ -72,6 +63,8 @@ public class OpenALLwjgl3Audio implements Lwjgl3Audio {
 	private ObjectMap<String, Class<? extends OpenALMusic>> extensionToMusicClass = new ObjectMap();
 	private OpenALSound[] recentSounds;
 	private int mostRecetSound = -1;
+	private String preferredOutputDevice = null;
+	private Thread observerThread;
 
 	Array<OpenALMusic> music = new Array(false, 1, OpenALMusic.class);
 	long device;
@@ -133,6 +126,55 @@ public class OpenALLwjgl3Audio implements Lwjgl3Audio {
 		((Buffer)position).flip();
 		alListenerfv(AL_POSITION, position);
 
+		alDisable(SOFTXHoldOnDisconnect.AL_STOP_SOURCES_ON_DISCONNECT_SOFT);
+		observerThread = new Thread(new Runnable() {
+
+			private String[] lastAvailableDevices = new String[0];
+
+			@Override
+			public void run () {
+				while (true) {
+					boolean isConnected = alcGetInteger(device, ALC_CONNECTED) != 0;
+					if (!isConnected) {
+						// The device is at a state where it can't recover
+						// This is usually the windows path on removing a device
+						switchOutputDevice(null, false);
+						continue;
+					}
+					if (preferredOutputDevice != null) {
+						if (Arrays.asList(getAvailableOutputDevices()).contains(preferredOutputDevice)) {
+							if (!preferredOutputDevice.equals(alcGetString(device, ALC_ALL_DEVICES_SPECIFIER))) {
+								// The preferred output device is reconnected, let's switch back to it
+								switchOutputDevice(preferredOutputDevice);
+							}
+						} else {
+							// This is usually the mac/linux path
+							if (preferredOutputDevice.equals(alcGetString(device, ALC_ALL_DEVICES_SPECIFIER))) {
+								// The preferred output device is reconnected, let's switch back to it
+								switchOutputDevice(null, false);
+							}
+						}
+					} else {
+						String[] currentDevices = getAvailableOutputDevices();
+						List<String> currentDevicesList = new ArrayList<>(Arrays.asList(currentDevices));
+						currentDevicesList.removeAll(Arrays.asList(lastAvailableDevices));
+						// If a new device got added, re evaluate "auto" mode
+						if (currentDevicesList.size() != 0) {
+							switchOutputDevice(null);
+						}
+						lastAvailableDevices = currentDevices;
+					}
+					try {
+						Thread.sleep(1000);
+					} catch (InterruptedException ignored) {
+						return;
+					}
+				}
+			}
+		});
+		observerThread.setDaemon(true);
+		observerThread.start();
+
 		recentSounds = new OpenALSound[simultaneousSources];
 	}
 
@@ -168,6 +210,25 @@ public class OpenALLwjgl3Audio implements Lwjgl3Audio {
 		} catch (Exception ex) {
 			throw new GdxRuntimeException("Error creating music " + musicClass.getName() + " for file: " + file, ex);
 		}
+	}
+
+	@Override
+	public boolean switchOutputDevice (String deviceIdentifier) {
+		return switchOutputDevice(deviceIdentifier, true);
+	}
+
+	private boolean switchOutputDevice (String deviceIdentifier, boolean setPreferred) {
+		if (setPreferred) {
+			preferredOutputDevice = deviceIdentifier;
+		}
+		return SOFTReopenDevice.alcReopenDeviceSOFT(device, deviceIdentifier, (IntBuffer)null);
+	}
+
+	@Override
+	public String[] getAvailableOutputDevices () {
+		List<String> devices = ALUtil.getStringList(0, ALC_ALL_DEVICES_SPECIFIER);
+		if (devices == null) return new String[0];
+		return devices.toArray(new String[0]);
 	}
 
 	int obtainSource (boolean isMusic) {
@@ -307,6 +368,7 @@ public class OpenALLwjgl3Audio implements Lwjgl3Audio {
 
 	public void dispose () {
 		if (noDevice) return;
+		observerThread.interrupt();
 		for (int i = 0, n = allSources.size; i < n; i++) {
 			int sourceID = allSources.get(i);
 			int state = alGetSourcei(sourceID, AL_SOURCE_STATE);
